--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "url": "git://github.com/lobo/sails-theme-article.git"
   },
   "author": "lobo",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "bower": "^1.7.9"
+  }
 }
